# facet-validate

./: .aiignore  .pre-commit-config.yaml  Cargo.toml  README.md
src/: error.rs  json.rs  lib.rs  main.rs  validation.rs
tests/: validation_test.rs
