[dependencies]
#facet = {git = "https://github.com/lmmx/facet.git", version = "0.2.0", branch = "feat-deserialise-string-affinity"}
#facet-json = {git = "https://github.com/lmmx/facet.git", version = "0.2.2", branch = "feat-deserialise-string-affinity"}
#facet-reflect = {git = "https://github.com/lmmx/facet.git", version = "0.6.2", branch = "feat-deserialise-string-affinity"}

facet = { path = "../facet/facet", version = "0.2.0"}
facet-json = { path = "../facet/facet-json/", version = "0.2.2" }
facet-reflect = { path = "../facet/facet-reflect/", version = "0.6.2"}

[package]
name = "facet-validate"
version = "0.1.0"
edition = "2024"
